--- a/project1/templates/base.html
+++ b/project1/templates/base.html
@@ -29,7 +29,9 @@
    <div class="container">
       <h1>Welcome to My Stylish Page!</h1>
       <p>This is the base content of my page.</p>
-      <a href="{% url 'register' %}" class="register-link">Register</a>
+
+      <a href="{% url 'project1:register' %}" class="register-link">Register</a>
+
    </div>
 </body>
 </html>
